[package]
name = "bitsquid_re_tools"
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    "bitsquid_unbundler",
    "luajit_decompiler",
    "re_core"
]

[dependencies]
bitsquid_unbundler = { version = "1.1.0", path = "bitsquid_unbundler" }
luajit_decompiler = { version = "0.1.0", path = "luajit_decompiler" }
re_core = { version = "0.2.0", path = "re_core" }
clap = { version = "4.2.2", features = ["cargo"] }