[package]
name = "bitsquid_re_tools"
version = "0.2.0"
edition = "2021"

[workspace]
members = [
    "bitsquid_unbundler",
    # "luajit_decompiler",
    "timpani",
    "compiler_bootstrap",
    "murmur32_gen",
]

[dependencies]
bitsquid_unbundler = { version = "1.1.0", path = "bitsquid_unbundler" }
# luajit_decompiler = { version = "0.1.0", path = "luajit_decompiler" }
timpani = { version = "0.1.0", path = "timpani" }
murmur32_gen = { version = "0.1.0", path = "murmur32_gen" }
compiler_bootstrap = { version = "0.1.0", path = "compiler_bootstrap" }
clap = { version = "4.2.2", features = ["cargo"] }
registry = "1.2.3"